--- a/src/index.css
+++ b/src/index.css
@@ -23,22 +23,31 @@ main {
   justify-content: space-around;
   align-items: center;
 }
-
+.title {
+  font-size: 40px;
+  margin: 0;
+}
+.instructions {
+  font-weight: 600;
+  margin-top: 0;
+  text-align: center;
+}
 .dice__container {
   display: grid;
   grid-template: auto auto / repeat(5, 1fr);
   gap: 20px;
+  margin-bottom: 40px;
 }
 .die-face {
   height: 60px;
   width: 60px;
+  /* color: white; */
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.15);
   border-radius: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
-  background-color: white;
 }
 .die__numb{
    font-size: 2rem;
@@ -64,4 +73,7 @@ main {
   box-shadow: 0 4px rgb(144, 137, 137);
   background-color: #3e8e41;
   transform: translateY(2px);
+}
+.isHeld {
+  background-color: #59E391;
 }
