Added last functionality to Tenzies game
After the user win the game, clicking btn 'new game' will reset the game and start a new game.

--- a/src/index.css
+++ b/src/index.css
@@ -55,7 +55,7 @@ main {
 
 .roll__dice {
   height: 50px;
-  width: 100px;
+  /* width: 100px; */
   border: none;
   border-radius: 10px;
   background-color: #081138;
